# remove-print-statements

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  remove_print_statements.py  tox.ini
.github/workflows/: ci.yml  release.yml  test.yml
tests/: test_e2e.py  test_remove_print_statements.py  test_report.py
