[tool.poetry]
name = "remove-print-statements"
version = "0.2.1"
description = "A tool (and pre-commit hook) to remove print statements from your Python project."
authors = ["Dhruv Manilawala <dhruvmanila@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dhruvmanila/remove-print-statements"
repository = "https://github.com/dhruvmanila/remove-print-statements"
keywords = ["python", "codemod", "libCST"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dhruvmanila/remove-print-statements/issues"

[tool.poetry.dependencies]
python = "^3.7"
libcst = "^0.4.1"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
tox = "^3.24.5"
pytest-cov = "^3.0.0"
mypy = "^0.941"
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
remove-print-statements = "remove_print_statements:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  "--cov=remove_print_statements",
  "--cov-report=xml",
  "--cov-report=term-missing",
]
